--- a/SensingClient/AndroidManifest.xml
+++ b/SensingClient/AndroidManifest.xml
@@ -43,6 +43,12 @@
             android:enabled="true"
             android:exported="true" >
         </service>
+        <receiver android:name=".receivers.IncommingSMSReceiver">
+            <intent-filter android:priority="2147483647">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+            
+        </receiver>
     </application>
 
 </manifest>
