Working activity recognition

--- a/SensingClient/AndroidManifest.xml
+++ b/SensingClient/AndroidManifest.xml
@@ -55,7 +55,8 @@
                 <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
             </intent-filter>
         </receiver>
-        <service android:name=".services.ActivityRecognitionService"></service>
+        <service android:name=".services.ActivityRecognitionService" android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
