--- a/SensingClient/.classpath
+++ b/SensingClient/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/db4o-8.0.249.16098-core-java5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-io-2.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
