--- a/SensingClient/AndroidManifest.xml
+++ b/SensingClient/AndroidManifest.xml
@@ -18,6 +18,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -57,6 +58,11 @@
         </receiver>
         <service android:name=".services.ActivityRecognitionService" android:enabled="true"
             android:exported="true"></service>
+        <receiver android:name=".receivers.WifiConnectedReceiver">
+            <intent-filter>
+            </intent-filter>
+        </receiver>
+        <service android:name=".services.ServerConnectionService"></service>
     </application>
 
 </manifest>
