--- a/SensingClient/.classpath
+++ b/SensingClient/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/commons-io-2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gson-2.2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/trace.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
