added new fields to database, updated device to collect more information, improved stability when receving SMS

--- a/SensingClient/AndroidManifest.xml
+++ b/SensingClient/AndroidManifest.xml
@@ -71,6 +71,8 @@
         </receiver>
         
         <service android:name=".services.ServerConnectionService"></service>
+        <receiver android:name=".receivers.ScreenReceiver"></receiver>
+        <service android:name=".services.SaveToDBService" android:enabled="true"></service>
     </application>
 
 </manifest>
